# BookAlchemy

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yml
src/app/: __init__.py  database.py  decorators.py  models.py  routes.py
src/app/templates/: add_author.html  add_book.html  home.html
templates/: add_author.html  add_book..html  home.html
tests/: conftest.py  test_app.py  test_models.py  test_routes.py
